--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,16 @@ html, body {
   margin: 0;
 }
 .loading-screen {
-  display: none; /* Flex */
+  display: flex; /* Flex */
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
+  top:0;
+  left:0;
   overflow: hidden;
   z-index: 150;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(255,255,255,0.75);
 }
 .loading-section {
