--- a/public/styles.css
+++ b/public/styles.css
@@ -65,6 +65,7 @@ html, body {
   -webkit-transition-duration: 0.2s;
   color: white;
   border: none;
+  cursor: pointer;
 }
 .btn-blue:hover {
   background-color: rgb(78, 108, 117);
@@ -419,6 +420,7 @@ h1 {
 }
 .item-container {
   width: 350px;
+  height: 450px;
   margin: 15px;
   background-color: white;
   padding: 15px;
@@ -465,8 +467,7 @@ h1 {
 }
 .item-container img {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 0.2em;
 }
 .item-container .item-description {
@@ -894,4 +895,111 @@ tr:hover td{
   color: white;
   margin-bottom: 5px;
   width: 98%;
+}
+
+/*PRODUCT EDITING*/
+.products-edit-wrapper {
+  display: flex;
+  justify-content: space-around;
+}
+
+.product-form {
+  width: 300px;
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 15px;
+  background-color: rgb(250,250,250);
+}
+#product-add-form {
+  display: none;
+}
+
+#image-upload-form {
+  width: 300px;
+}
+
+#table-products td {
+  padding: 10px;
+}
+.add-new-product {
+  width: 110px;
+  height: 35px;
+  margin: 15px;
+  color: white;
+  text-align: center;
+  padding: 8px;
+  text-indent: 25px;
+  font-size: 0.9em;
+  background-color: #73A1B0;
+  border-radius: 25px;
+  position: relative;
+  top: 10px;
+  right: 0;
+  cursor: pointer;
+  z-index: 99;
+  opacity: 0.7;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+@supports (position: sticky) {
+  .add-new-product {
+    -webkit-position: sticky;
+    position: sticky;
+    top: 50px;
+  }
+}
+.add-new-product:hover {
+  opacity: 1;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+.add-new-product::before {
+  content: '';
+  background-image: url('icons/plus.png');
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  background-position: 5.5px 5.5px;
+  width: 35px;
+  height: 35px;
+  background-color: #406672;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+}
+textarea {
+  resize: none;
+  font-family: 'Nunito', sans-serif;
+}
+#product-edit-form button {
+  padding: 15px;
+  font-size: 1em;
+  margin: 10px 0;
+  border-radius: 4px;
+}
+.products-table-error {
+  padding: 10px;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+#product-edit-form {
+  display: none;
+}
+
+.products-actions-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.remove-product {
+  background-color: rgb(199, 100, 70);
+  color: white;
+  font-weight: bold;
+  width: 16px;
+  height: 16px;
+  font-size: 0.8em;
+  text-align: center;
+  cursor: pointer;
 }
