--- a/public/styles.css
+++ b/public/styles.css
@@ -124,6 +124,15 @@ html, body {
   z-index: 99;
   padding: 0 20px;
 }
+.navigation-bar .logo {
+  background-image: url('logo.png');
+  background-size: 36px 36px;
+  background-position: 0 0;
+  object-fit: contain;
+  width: 36px;
+  height: 36px;
+  transform: translate(-10px, 2px);
+}
 
 .navigation-bar a {
   text-decoration: none;
