Fixed the unresponsive 'Edit products' column

--- a/public/styles.css
+++ b/public/styles.css
@@ -981,7 +981,7 @@ textarea {
 .products-actions-column {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .remove-product {
