--- a/public/styles.css
+++ b/public/styles.css
@@ -126,6 +126,7 @@ html, body {
   padding: 0 20px;
 }
 
+
 .navigation-bar a {
   text-decoration: none;
   color: white;
@@ -141,6 +142,69 @@ html, body {
 .navigation-bar a.username {
   text-transform: none;
   margin-right: auto;
+}
+.toggleNav {
+  display: none;
+}
+.closeNav {
+  display: none;
+}
+
+@media (max-width: 540px) {
+  .navigation-bar {
+    width: 100%;
+    min-height: 38px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    position: sticky;
+    top:0;
+    left: 0;
+    z-index: 100;
+    padding: 0 20px;
+  }
+  .navigation-bar a.username {
+    display: none;
+  }
+  .navigation-bar a {
+    display: none;
+    margin-left: 0;
+  }
+  .toggleNav {
+    margin: 4px auto;
+    width: 28px;
+    height: 28px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    opacity: 0.3;
+    cursor: pointer;
+  }
+  .closeNav {
+    display: none;
+    width: 28px;
+    height: 28px;
+    color: #f2f2f2;
+    font-size: 1.8em;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: 0.3;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+  .closeNav:hover {
+    opacity: 1;
+  }
+  .toggleNav > .bar {
+    background: #f2f2f2;
+    width: 100%;
+    height: 3.5px;
+    border-radius: 10px;
+  }
+  .toggleNav:hover {
+    opacity: 1;
+  }
 }
 /* Floating cart icon */
 .floating-cart {
