--- a/public/styles.css
+++ b/public/styles.css
@@ -75,6 +75,9 @@ body {
   font-size: 1.5em;
   padding: 5px 10px;
   border-radius: 4px;
+  max-width: 110px;
+  text-align: center;
+  margin: 0 auto;
 
 }
 .btn-blue:hover {
@@ -846,7 +849,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 2em;
   cursor: default;
 }
-.close-checkout {
+.close-checkout, .close-product-modal {
   color: #f2f2f2;
   opacity: 0.3;
   width: 35px;
@@ -854,10 +857,10 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 1.3em;
   text-align: center;
   font-weight: bold;
-  cursor: pointer;
+  cursor: default;
   transition-duration: 0.5s;
 }
-.close-checkout:hover {
+.close-checkout:hover, .close-product-modal:hover {
   opacity: 1;
 }
 .order-details {
@@ -1031,9 +1034,9 @@ input[type=number]::-webkit-outer-spin-button {
 table {
   border: 1px solid black;
   width: 100%;
-  max-width: 800px;
+  max-width: 1200px;
   margin: 15px auto;
-  word-break:break-all;
+  word-break:break-word;
 }
 table, th, td {
   border: 1px solid black;
@@ -1042,6 +1045,7 @@ table, th, td {
 th {
   background-color: black;
   color: white;
+  font-size: 0.8em;
 }
 td {
   background-color: white;
@@ -1086,44 +1090,83 @@ td {
   font-size: 0.8em;
 }
 
+.btn-edit-product {
+  font-size: 0.8em;
+  padding: 5px;
+}
 /*PRODUCT EDITING*/
-.products-edit-wrapper {
-  display: flex;
-  justify-content: space-around;
+.products-modal {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+.modal-black {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #000000;
+  opacity: 0.8;
 }
 
 .product-form {
-  width: 300px;
+  width: 100%;
+  max-width: 360px;
   border: 1px solid black;
   border-radius: 4px;
   padding: 15px;
   background-color: rgb(250,250,250);
+  position: relative;
 }
-#product-add-form {
-  display: none;
+.form-header {
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+  font-size: 1.2em;
 }
-
-#image-upload-form {
-  width: 300px;
+.form-line {
+  width: 100%;
+  margin-bottom: 10px;
+  font-size: 1.2em;
 }
-
-#table-products td {
-  padding: 10px;
+.form-line > input, .form-line > select {
+  font-size: 0.8em;
+  font-family: "Nunito", sans-serif;
+  margin-left: 5px;
+  border: 1px solid grey;
+}
+.form-line > input[type="number"] {
+  width: 60px;
+  text-align: center;
+}
+.product-form-error {
+  font-size: 0.8em;
+  text-align: center;
+  color: #C84741;
+  padding: 5px
 }
 .add-new-product {
   width: 110px;
   height: 35px;
-  margin: 15px;
   color: white;
   text-align: center;
   padding: 8px;
   text-indent: 25px;
   font-size: 0.9em;
+  margin-top: 10px;
   background-color: #73A1B0;
   border-radius: 25px;
-  position: relative;
-  top: 10px;
-  right: 0;
+  position: sticky;
+  top: 50px;
+  left: 20px;
   cursor: pointer;
   z-index: 50;
   opacity: 0.7;
@@ -1132,8 +1175,6 @@ td {
 }
 .add-new-product:hover {
   opacity: 1;
-  transition-duration: 0.3s;
-  -webkit-transition-duration: 0.3s;
 }
 .add-new-product::before {
   content: '';
@@ -1152,16 +1193,10 @@ td {
 textarea {
   resize: none;
   font-family: 'Nunito', sans-serif;
-}
-#product-edit-form button {
-  padding: 15px;
-  font-size: 1em;
-  margin: 10px 0;
-  border-radius: 4px;
+  border: 1px solid grey;
 }
 .err-container {
   width: 100%;
-  padding: 10px;
   border: #406672;
   background: #f2f2f2;
   text-align: center;
@@ -1169,7 +1204,11 @@ textarea {
   top: 0;
   left: 0;
   transition-duration: 1.5s;
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  opacity: 0;
 }
 .products-table-error, .orders-table-error {
   padding: 10px;
@@ -1191,9 +1230,13 @@ textarea {
   background-color: rgb(199, 100, 70);
   color: white;
   font-weight: bold;
-  width: 16px;
-  height: 16px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
   font-size: 0.8em;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  margin-top: 4px;
 }
