--- a/public/styles.css
+++ b/public/styles.css
@@ -1074,13 +1074,20 @@ td {
   width: 16px;
   height: 16px;
   color: white;
-  background-color: rgb(82, 20, 20);
-  font-size: 0.8em;
-  text-align: center;
+  border-radius: 50%;
+  background-color: #C84741;
+  font-size: 0.7em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 5px auto;
   font-weight: bold;
   cursor: pointer;
-  padding: 1.5px 0px;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+.orders-delete:hover {
+  background-color: rgb(150, 53, 48);
 }
 .orders-action-column {
   display: flex;
@@ -1201,7 +1208,7 @@ textarea {
   background: #f2f2f2;
   text-align: center;
   position: sticky;
-  top: 0;
+  top: 55px;
   left: 0;
   transition-duration: 1.5s;
   display: flex;
@@ -1239,4 +1246,27 @@ textarea {
   align-items: center;
   cursor: pointer;
   margin-top: 4px;
+}
+
+.confirm-modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.confirm-box {
+  position: relative;
+  background: #B0C6B0;
+  padding: 15px;
+}
+.buttons-line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
