--- a/public/styles.css
+++ b/public/styles.css
@@ -146,15 +146,16 @@ body {
   z-index: 99;
   padding: 0 20px;
 }
-.navigation-bar a {
+.navigation-bar a, .nav-link {
   text-decoration: none;
   color: white;
   padding: 10px;
   transition-duration: 0.3s;
   margin-left: 20px;
   font-size: 1.2em;
+  cursor: pointer;
 }
-.navigation-bar a:hover {
+.navigation-bar a:hover , .nav-link:hover{
   transform: scale(1.02, 1.02);
 }
 .toggleNav {
