--- a/public/styles.css
+++ b/public/styles.css
@@ -238,13 +238,14 @@ a.username::before {
     font-size: 0.8em;
     text-transform: none;
   }
-  .navigation-bar a {
+  .navigation-bar > .navbar-item {
     display: none;
     margin-left: 0;
   }
   .toggleNav {
-    width: 20px;
-    height: 16px;
+    padding: 3px 0px;
+    width: 25px;
+    height: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -253,10 +254,10 @@ a.username::before {
   }
   .closeNav {
     display: none;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     color: #f2f2f2;
-    font-size: 1em;
+    font-size: 1.25em;
     font-weight: bold;
     cursor: pointer;
     opacity: 0.3;
@@ -270,7 +271,7 @@ a.username::before {
   .toggleNav > .bar {
     background: #f2f2f2;
     width: 100%;
-    height: 1.5px;
+    height: 3px;
     border-radius: 5px;
   }
   .toggleNav:hover {
@@ -690,6 +691,11 @@ input[type=number]::-webkit-outer-spin-button {
   border: 1px solid white;
   border-radius: 5px;
   cursor: pointer;
+  width: 110px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* CART STYLES */
