Project restructured (templates, js files). Icons changed. CSS updates.

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Online Store</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link type="image/x-icon" rel="icon" href="public/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="public/styles.css">
+    <script src="https://checkout.stripe.com/checkout.js" defer></script>
+    <script src="public/js/catalog.js" defer></script>
+    <script src="public/store.js" defer></script>
+    <script src="public/js/navigation.js" defer></script>
+  </head>
+  <body>
+
+    <div class='header'>
+      <img src="./public/header.jpg" class="header_image">
+      <div class="header-text">Online Store</div>
+    </div>
+  
+  
   <div class='loading-screen'>
     <div class="loading-section">
       <div class="section-title">Loading</div>
@@ -7,16 +29,13 @@
   </div>
 
     <div class="navigation-bar">
-      <div class="closeNav">X</div>
-      <div class="toggleNav">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+      <div class="navbar-toggle-container">
+        <div class="closeNav">&times;</div>
+        <div class="toggleNav">
+          <img class="bars-icon" src="public/icons/bars.png">
+        </div>
       </div>
-      <div class="user-section">
-        <a class="username" href="/dashboard"></a>
-        <div class="nav-log-out"></div>
-      </div>
+      <div class="user-section"></div>
       <a class="navbar-item" href="/">Store</a>
       <a class="navbar-item" href="/checkorder">Check order</a>
       <div class="nav-link navbar-item" id="management">Administration</div>
@@ -120,3 +139,9 @@
       
       </div>
     </div>
+
+    <div class='footer'>
+      <span>Online Store example by Lukas Grinys<br>2019-2020</span>
+    </div>
+  </body>
+</html>
