--- a/public/templates/notFound.html
+++ b/public/templates/notFound.html
@@ -7,11 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link type="image/x-icon" rel="icon" href="public/favicon.ico">
     <link rel="stylesheet" type="text/css" href="public/styles.css">
-    <script src="https://checkout.stripe.com/checkout.js" defer></script>
     <script src="public/store.js" defer></script>
   </head>
   <body>
-    <div class='header'>
-      <img src="./public/header.jpg" class="header_image">
-      <div class="header-text">Online Store</div>
+    
+    <div class='container'>
+      <h1>404 Not Found</h1>
+      <div style="text-align:center">
+        It seem's that the page you requested does not exist.<br>
+        <a href="/">Back to store</a>
+      </div>
+      
     </div>
