--- a/public/styles.css
+++ b/public/styles.css
@@ -163,6 +163,7 @@ body {
 .navigation-bar a:hover , .nav-link:hover{
   transform: scale(1.02, 1.02);
 }
+
 .toggleNav {
   display: none;
 }
@@ -176,25 +177,23 @@ body {
   align-items: center;
 }
 .nav-log-out {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   background-image: url('./icons/logout.png');
   background-size: 100% 100%;
   position: relative;
-  transform: rotate(180deg);
   opacity: 0.5;
   cursor: pointer;
   transition-duration: 0.5s;
 }
 .nav-log-out::after {
   position: absolute;
-  right: 22px;
-  top: 0;
+  left: -6px;
+  top: 18px;
   width: 75px;
   content: 'Log out';
   color: white;
-  font-size: 0.9em;
-  transform: rotate(180deg);
+  font-size: 0.7em;
   height: 20px;
   opacity: 0;
   transition-duration: 0.3s;
@@ -206,21 +205,14 @@ body {
   opacity: 1;
 }
 a.username {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1.2em;
-  position: relative;
-  text-indent: 10px;
-  text-align: center;
 }
-a.username::before {
-  position: absolute;
-  top: 12px;
-  left: 0;
-  content: '';
+.user-icon {
   width: 20px;
   height: 20px;
-  background-image: url('./icons/user.png');
-  background-size: 100% 100%;
 }
 @media (max-width: 620px) {
   .navigation-bar {
@@ -234,56 +226,62 @@ a.username::before {
     top: -2px;
     left: 0;
     z-index: 100;
-    padding: 0 20px;
+    padding-top: 38px;
   }
   .user-section {
     position: absolute;
     top: 0;
-    left: 15px;
+    left: 5px;
     font-size: 0.8em;
-    text-transform: none;
   }
-  .navigation-bar > .navbar-item {
+  .navbar-item {
     display: none;
-    margin-left: 0;
+  }
+  .navbar-toggle-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 38px;
   }
   .toggleNav {
-    padding: 3px 0px;
     width: 25px;
     height: 25px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
     opacity: 0.3;
     cursor: pointer;
   }
   .closeNav {
     display: none;
-    width: 25px;
-    height: 25px;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    transform: translateX(8px);
     color: #f2f2f2;
-    font-size: 1.25em;
+    font-size: 2em;
     font-weight: bold;
     cursor: pointer;
     opacity: 0.3;
-    text-align: center;
-    margin-bottom: 10px;
-    transform: translateY(5px);
   }
   .closeNav:hover {
     opacity: 1;
   }
-  .toggleNav > .bar {
-    background: #f2f2f2;
-    width: 100%;
-    height: 3px;
-    border-radius: 5px;
+  .bars-icon {
+    width: 30px;
+    height: 30px;
   }
   .toggleNav:hover {
     opacity: 1;
   }
   .nav-log-out::after {
     width: 60px;
+    left: 0px;
   }
   table {
     font-size: 0.7em;
