Small style adjustments

--- a/public/styles.css
+++ b/public/styles.css
@@ -164,6 +164,10 @@ body {
   transform: scale(1.02, 1.02);
 }
 
+.navbar-toggle-container {
+  display: none;
+}
+
 .toggleNav {
   display: none;
 }
