--- a/public/templates/users.html
+++ b/public/templates/users.html
@@ -20,7 +20,9 @@
         <img class="bars-icon" src="public/icons/bars.png">
       </div>
     </div>
-    <div class="user-section"></div>
+    <div class="user-section flex-center">
+      <span style="color:#f2f2f2;font-size:0.8rem;padding:10px 15px">Loading</span>
+    </div>
     <a href="/">Back to store</a>
     <a href="/orders">Orders</a>
     <a href="/users">Users</a>
