--- a/public/templates/notFound.html
+++ b/public/templates/notFound.html
@@ -13,7 +13,7 @@
     
     <div class='container'>
       <h1>404 Not Found</h1>
-      <div style="text-align:center">
+      <div class="flex-center">
         It seem's that the page you requested does not exist.<br>
         <a href="/">Back to store</a>
       </div>
